Attribute list bug where attributes where not showing correctly when there was more then the informationbox spanned,.

--- a/com.getshop.client/apps/Product/skin/Product.css
+++ b/com.getshop.client/apps/Product/skin/Product.css
@@ -44,15 +44,15 @@ font-size: 19px; }
 .Product .product_edit_area .row select.smallinput.taxgroup { width: 120px; }
 
 .Product .product_attributes .attrcontainer { display:inline-block; background-color:#3f3f3f; border-radius: 5px; float:left; color:#CCC; }
-.Product .product_attributes .attrcontainer .group_name_row { padding-left: 10px; padding-top: 5px; height: 30px; }
-.Product .product_attributes .attrcontainer .group_name_row .add_value_container { position:absolute; right: 21px; width: 210px; }
+.Product .product_attributes .attrcontainer .group_name_row { padding-left: 10px; padding-top: 2px; height: 27px; background-color:#535353; margin-top:10px; margin-bottom: 5px; }
+.Product .product_attributes .attrcontainer .group_name_row .add_value_container { position:absolute; right: 21px; width: 228px; }
 .Product .product_attributes .attrcontainer .group_name_row .add_value_container input { padding: 2px; border: solid 1px #666; border-radius:3px; }
 .Product .product_attributes .attrcontainer .group_name_row .add_value_container .gs_button { line-height: 18px; top: 2px; border: solid 1px #666; position:absolute; right: 0px; }
-.Product .product_attributes .attrcontainer .create_container { position:absolute; right:20px; width:227px; }
+.Product .product_attributes .attrcontainer .create_container { position:absolute; right:20px; width:235px; }
 .Product .product_attributes .attrcontainer .create_container input { border: solid 1px #666666; padding: 5px; border-radius:5px;}
 .Product .product_attributes .attrcontainer .create_container .gs_button { line-height: 24px; margin-top: 2px; float:right; }
 .Product .product_attributes .attrcontainer.added { margin-right: 15px; }
-.Product .product_attributes .attrcontainer .added_container {height: 200px; display:inline-block; width: 470px;}
+.Product .product_attributes .attrcontainer .added_container {min-height: 200px; display:inline-block; width: 470px;}
 .Product .product_attributes .attrcontainer .title { padding: 10px; border-bottom: solid 1px #666666; }
 .Product .product_attributes .attrcontainer .attribute_value { position:relative; margin-right: 3px; display:inline-block; margin-bottom: 3px; }
 .Product .product_attributes .attrcontainer .group_name_row .name { font-size: 16px; }
